--- a/Resources/Strings.pt-BR.resx
+++ b/Resources/Strings.pt-BR.resx
@@ -98,7 +98,25 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-	<data name="Demonstration" xml:space="preserve">
-		<value>Demonstração</value>
+	<data name="SelectLanguage" xml:space="preserve">
+		<value>Selecione o idioma do sistema: (1- pt-BR, 2 - en-US) </value>
+	</data>
+	<data name="SelectTheAction" xml:space="preserve">
+		<value>Selecione a ação para realizar na agenda</value>
+	</data>
+	<data name="AddPersons" xml:space="preserve">
+		<value>Adicionar Pessoas</value>
+	</data>
+	<data name="RemovePersons" xml:space="preserve">
+		<value>Remover Pessoas</value>
+	</data>
+	<data name="ListPersons" xml:space="preserve">
+		<value>Listar Pessoas</value>
+	</data>
+	<data name="UpdateLanguageString" xml:space="preserve">
+		<value>Alterar idioma</value>
+	</data>
+	<data name="CloseApplication" xml:space="preserve">
+		<value>Fechar aplicação</value>
 	</data>
 </root>
