Implementando Relatorio com internacionalização

--- a/ContactBook/Resources/Strings.en-US.resx
+++ b/ContactBook/Resources/Strings.en-US.resx
@@ -164,4 +164,19 @@
 	<data name="ShowContacts" xml:space="preserve">
 		<value>Listing phonebook contacts!</value>
 	</data>
+	<data name="ExportPdf" xml:space="preserve">
+		<value>Export in PDF</value>
+	</data>
+	<data name="Address" xml:space="preserve">
+		<value>Address</value>
+	</data>
+	<data name="ContactsDirectoryDate" xml:space="preserve">
+		<value>Contacts Directory - Date</value>
+	</data>
+	<data name="Date" xml:space="preserve">
+		<value>dd/MM/yyyy</value>
+	</data>
+	<data name="TotalContacts" xml:space="preserve">
+		<value>Total Contacts</value>
+	</data>
 </root>
