--- a/ContactBook/Resources/Strings.en-US.resx
+++ b/ContactBook/Resources/Strings.en-US.resx
@@ -122,10 +122,10 @@
 	<data name="StarList" xml:space="preserve">
 		<value>Starting contact listing</value>
 	</data>
-	<data name="HowManyPeople" xml:space="preserve">
+	<data name="HowManyPeopleRemoveToTheList" xml:space="preserve">
 		<value>How many people do you want to remove from the list?</value>
 	</data>
-	<data name="NumberOfPeopleToRemove" xml:space="preserve">
+	<data name="NumberOfPeopleToRemoveExceeded" xml:space="preserve">
 		<value>The number of people to remove is greater than the number of registered people, enter another number</value>
 	</data>
 	<data name="InvalidOption" xml:space="preserve">
@@ -178,5 +178,8 @@
 	</data>
 	<data name="TotalContacts" xml:space="preserve">
 		<value>Total Contacts</value>
+	</data>
+	<data name="CreateFourFictionalPeople" xml:space="preserve">
+		<value>Create 4 Fictional People</value>
 	</data>
 </root>
